# Auto-Translate-Telegram-Channel

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  todo.md
.github/workflows/: upload_to_s3.yaml
etc/bak/: teletranschan.py
lambda/: terminateEC2Instance.py
scripts/: devrunner.py
src/: config.py  server.py
src/clients/: openai.py  telegram.py
src/mirrowchan/: server.py  utils.py
src/mirrowchan/clients/: openai.py  telegram.py
src/mirrowchan/services/: messages.py  translation.py
src/mirrowchan/templates/: index.html
src/services/: messages.py  translation.py
src/teletranchan/: config.py  server.py
src/teletranchan/clients/: openai.py  telegram.py
src/teletranchan/services/: messages.py  translation.py
terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
